# studienarbeit

./: .gitattributes  .gitignore  .gitmodules  2.3  README.md  _vizdoom copy.ini  _vizdoom.ini  callbacks.py  deadly-corridor (1).ipynb  defend-the-line.ipynb  eval.py  eval_reward.json  main.py  p.txt  ppo_pretraining copy.py  ppo_pretraining.py  pyproject.toml  requirements.txt  reset_training.sh  state.db  take-cover.ipynb  testModel (1).py  testModel copy.py  testModel.py  train.py  visualize.py  vizdoom_env copy.py  vizdoom_env.py  vizdoom_env_basic.py  wrappers.py
custom_metrics/deadly_C_lvl1_200_pretrained_1.0/: events.out.tfevents.1732894149.doom.5784.0  events.out.tfevents.1732894149.doom.5784.1  events.out.tfevents.1732894150.doom.5784.2  events.out.tfevents.1732894150.doom.5784.3  events.out.tfevents.1732894150.doom.5784.4  events.out.tfevents.1732894150.doom.5784.5  events.out.tfevents.1732897636.doom.7473.0
custom_metrics/deadly_C_lvl1_400_1/: events.out.tfevents.1732395314.doom.19158.0  events.out.tfevents.1732395315.doom.19158.1  events.out.tfevents.1732395315.doom.19158.2  events.out.tfevents.1732395315.doom.19158.3  events.out.tfevents.1732395315.doom.19158.4  events.out.tfevents.1732395316.doom.19158.5  events.out.tfevents.1732414323.doom.21370.0
custom_metrics/deadly_c_lvl1_400_2/: events.out.tfevents.1732414660.doom.21619.0  events.out.tfevents.1732414660.doom.21619.1  events.out.tfevents.1732414660.doom.21619.2  events.out.tfevents.1732414660.doom.21619.3  events.out.tfevents.1732414661.doom.21619.4  events.out.tfevents.1732414661.doom.21619.5  events.out.tfevents.1732452673.doom.23820.0
custom_metrics/dtl_lvl1/: events.out.tfevents.1744911250.08758df5b915.190.0  events.out.tfevents.1744911250.08758df5b915.190.1  events.out.tfevents.1744911250.08758df5b915.190.2  events.out.tfevents.1744911251.08758df5b915.190.3  events.out.tfevents.1744911251.08758df5b915.190.4  events.out.tfevents.1744911251.08758df5b915.190.5  events.out.tfevents.1744911252.08758df5b915.190.6  events.out.tfevents.1744911252.08758df5b915.190.7  events.out.tfevents.1744911252.08758df5b915.190.8  (+4 more)
data/: dataset.py  doom.py  env.py
dataloaders/: gym.py
modules/: __init__.py  actor.py  conv.py  models.py  module old.py  trans.py  types.py
pretrained/: common.py  envs.py  models.py
scenarios/: basic.cfg  deathmatch_maze.cfg
scenarios copy/: basic.cfg  deathmatch_maze.cfg
(+33464 files in other folders)
