[tool.poetry]
name = "studienarbeit"
version = "0.1.0"
description = ""
authors = [
    "Leander Gmeiner <leander.gmeiner@gmail.com>",
    "Daniel Siegert",
    "Vinzent Engel",
]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "<3.11,>=3.10"
pandas = "^2.2.3"
jupyter = "^1.1.1"
pyarrow = "^18.0.0"
vizdoom = "^1.2.4"
lightning = {extras = ["extra"], version = "^2.5.1.post0"}
torchtune = "^0.4.0"
torchvision = ">0.20.1"
ruff = "^0.7.4"
transformers = "^4.46.2"
wheel = "^0.45.0"
torchao = ">=0.9"
torch = "^2.6"
einops = "^0.8.0"
torchrl = "^0.8"
# TODO: Update once compatability between TorchRL and Gymnasium have been established
# gymnasium = {extras = ["other"], version = "^1.1.1"}
gymnasium = {extras = ["other"], version = "^0.29"}
stable-baselines3 = "^2.5.0"
h5py = "^3.13.0"
levdoom = "^1.0.1"
av = "^14.3.0"
gym = "^0.26.2"
tensorboard = "^2.19.0"
bitsandbytes = "^0.45.5"
accelerate = "^1.6.0"
optimum = {extras = ["onnxruntime-gpu"], version = "^1.25.0"}
onnxruntime = "^1.22.0"
onnx = "^1.18.0"
timm = "^1.0.15"
captum = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
